Both MqttSender() and MqttSubscriber() working.

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
 
   "require": {
-    "php-mqtt/client" : "1.1.1"
+    "php-mqtt/client" : "1.1.1",
+    "ext-pcntl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.1"
